# schlop

./: LICENSE  README.md  docker-compose.yml  schlop.cabal  schlop.rest
db/: migrations.sql
elm/: .gitignore  elm-package.json  index.html  main.scss
elm/src/: Main.elm  Schlop.elm
nginx/: nginx.conf
src/: ClientGenerator.hs  DB.hs  Documentation.hs  Lib.hs  Types.hs
