name:                schlop
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/trezona-lecomte/schlop#readme
license:             MIT
license-file:        LICENSE
author:              Kieran Trezona-le Comte
maintainer:          trezona.lecomte@gmail.com
copyright:           Flux Federation
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Types
                     , ClientGenerator
                     , Documentation
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , case-insensitive
                     , elm-export
                     , http-client
                     , postgresql-simple
                     , resource-pool
                     , servant-client
                     , servant-elm
                     , servant-docs
                     , servant-kotlin
                     , servant-server
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010

executable schlop
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , schlop
  default-language:    Haskell2010

test-suite schlop-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , http-types
                     , QuickCheck
                     , schlop
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/trezona-lecomte/schlop
